# Aegis

./: .env.example  .gitignore  AGENTS.md  README.md  launch_aegis.bat  pyproject.toml  test.bat  test_debug.bat
config/: guard_rules.yaml  models.yaml  settings.yaml  tools.yaml
docs/: AEGIS_VISION.md  HACKATHON_RC_SCOPE.md  SPRINT_SEQUENCE_HACKATHON_RC.md  action-attribution-change-intelligence-contract-v1.md  action-attribution-change-intelligence-contract.md  aegis-architecture-realignment-v2.md  aegis-architecture-realignment.md  aegis-ask-product-slice.md  aegis-branded-integration-policy.md  aegis-current-mission.md  aegis-mode-policy.md  aegis-operating-context.md  aegis-orchestrator-architecture.md  aegis-read-only-bridge-openapi.yaml  audit-query-layer-readiness-v1.md  audit-query-layer-readiness.md  autopilot-core.md  autopilot-rc1-core.md  backend-timeout-event-projection-contract-v1.md  backend-timeout-event-projection-contract.md  bounded-agent-runtime-rc1.md  bounded-agent-runtime.md  capability-lease-design-v1.md  capability-lease-design.md  capability-model.md  chatgpt-read-only-bridge.md  codex-skill-pack-for-aegis-v1.md  codex-skill-pack-for-aegis.md  compliance-evidence-pack-readiness-v1.md  compliance-evidence-pack-readiness.md  context-compiler-read-only-contract-implementation-v1.md  context-compiler-read-only-contract-implementation.md  context-compiler-read-only-integration-readiness-v1.md  context-compiler-read-only-integration-readiness.md  context-retrieval-provider-context-budget-v1.md  context-retrieval-provider-context-budget.md  custom-gpt-aegis-architect-instructions.md  developer-work-passport-contract-v1.md  developer-work-passport-contract.md  external-api-sdk-readiness-v1.md  (+163 more)
frontend/: .eslintrc.json  package-lock.json  package.json  tailwind.config.ts
schemas/: intent.schema.json  (+7 more)
(+400 files in other folders)
