[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis"
version = "0.1.0"
description = "Local-first, multi-modal, secure desktop AI copilot"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Aegis Team"}
]

dependencies = [
    # --- Core ---
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # --- Config ---
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.1",

    # --- Schema Validation ---
    "jsonschema>=4.23.0",

    # --- HTTP Client ---
    "httpx>=0.27.0",

    # --- Local Model Backend ---
    "ollama>=0.4.0",

    # --- Vector DB ---
    "qdrant-client>=1.12.0",

    # --- Logging ---
    "structlog>=24.4.0",

    # --- Utilities ---
    "orjson>=3.10.0",
    "python-socketio>=5.11.0",
    "pillow>=10.4.0",
    "pyautogui>=0.9.54",
    "pyperclip>=1.9.0",
    "playwright>=1.49.0",
    "pygetwindow>=0.0.9",
    "psutil>=6.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["-m", "not windows_live"]
markers = [
    "windows_live: tests that drive real Windows applications and require explicit opt-in",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
